--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -54,7 +54,7 @@ table {
 
 :root {
 	--color-primary: #0F0F0F;
-	--color-primary-light: #363636;
+	--color-primary-light: #4b4b4b;
 	--color-secondary: #dfdfdf;
 }
 
