--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -53,7 +53,7 @@ table {
 }
 
 :root {
-	--color-primary: #0F0F0F;
+	--color-primary: #1a1a1d;
 	--color-primary-light: #8b8b8b;
 	--color-secondary: #dfdfdf;
 }
