--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root {
+	--color-primary: #121212;
+	--color-primary-light: #8b8b8b;
+	--color-secondary: #e3e3e3;
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+	--color-white: #e1d5c9;
+	--color-red: #9b2222;
+	--color-purple: #633664;
+	--color-orange: #af3a13;
+	--color-sakura: #896789;
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -50,12 +56,6 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
-
-:root {
-	--color-primary: #1a1a1d;
-	--color-primary-light: #8b8b8b;
-	--color-secondary: #dfdfdf;
 }
 
 .page-container {
