ladno, nachnu pisat normalnye commits

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -8,8 +8,8 @@
 
 	--color-white: #e1d5c9;
 	--color-red: #9b2222;
-	--color-purple: #633664;
-	--color-orange: #af3a13;
+	--color-purple: #623963;
+	--color-orange: #ca5833;
 	--color-sakura: #896789;
 }
 
