add model, some styling

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -8,7 +8,7 @@
 	--color-secondary: #e3e3e3;
 
 	--color-white: #e1d5c9;
-	--color-red: #9b2222;
+	--color-red: #9d3131;
 	--color-purple: #623963;
 	--color-orange: #ca5833;
 	--color-sakura: #896789;
