--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -10,7 +10,7 @@
 	--color-white: #e1d5c9;
 	--color-red: #c52c2c;
 	--color-purple: #623963;
-	--color-orange: #ca5833;
+	--color-yellow: #f8a63a;
 	--color-sakura: #896789;
 }
 
