--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -4,10 +4,11 @@
 
 :root {
 	--color-primary: #121212;
-	--color-primary-light: #1b1b1b;
+	--color-primary-light: #242424;
 	--color-secondary: #e3e3e3;
 
 	--color-white: #e1d5c9;
+  --color-gray: #969696;
 	--color-red: #c52c2c;
 	--color-purple: #623963;
 	--color-yellow: #f8a63a;
