--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap');
 
+// Импортируем стили для асинхронных компонентов
+@import './async-components.scss';
+
 :root {
 	--color-primary: #121212;
 	--color-primary-light: #242424;
