yandex-sans last-post-block

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -14,7 +14,7 @@
 
 @font-face {
     font-family: 'Yandex Sans Regular';
-    src: url('/src/assets/fonts/YandexSansText-Regular.woff') format('woff');
+    src: url('/src/assets/fonts/YandexSansText-Regular.woff2') format('woff');
     font-style: normal;
     font-display: swap;
 }
